# sample_project_template

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  coverage.json  ignore-words.txt  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  tox.toml  zx-config.txt
.github/workflows/: test.yml
sample/: get_zen.py
src/sample/: __init__.py  get_zen.py  version.py
tests/: __init__.py  test_get_zen.py
