[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list =
        py310
        py39
        flake8
        mypy

    [testenv]
    deps = pytest
    commands = pytest tests

    [testenv:flake8]
    deps = flake8
    commands = flake8 src tests

    [testenv:mypy]
    deps = mypy
    commands = mypy src
"""