[metadata]
name = sample
version = 0.1.0
description = A sample Python Project Tutorial for packaging
author = Julio Arana
readme = README.md
license = MIT
license_file = LICENSE
keywords = sample, setuptools, development, tutorial, packaging
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3.10 :: Only

[options]
packages =
    sample
install_requires =
    requests>=2
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
sample = py.typed

[flake8]
max-line-length = 88

[tox:tox]
min_version = 4.0
env_list =
    py310
    py39
    py38
    flake8
    mypy

[testenv]
deps = pytest
commands = pytest tests

[testenv:flake8]
deps = flake8
commands = flake8 src tests

[testenv:mypy]
deps = mypy
commands = mypy src tests
