[metadata]
name = sample
version = 0.1.0
description = A sample Python Project Tutorial for packaging
author = Julio Arana
readme = README.md
license = MIT
license_file = LICENSE
keywords = sample, setuptools, development, tutorial, packaging
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3.10 :: Only

[options]
packages =
    sample
install_requires =
    requests==2.32.2
    importlib-metadata==4.8.1
python_requires = >=3.7
package_dir =
    =src
zip_safe = no



[options.extras_require]
testing =
    pytest==6.2.5
    coverage==7.6.1
    mypy==1.11.2
    flake8==7.1.1
    tox==4.0.0

[flake8]
max-line-length = 90

[tox:tox]
env_list =
    py313
    py312
    py311
    py310
    py39
    py38
    flake8
    mypy

[testenv]
deps = pytest
commands = pytest tests

[testenv:flake8]
deps = flake8
commands = flake8 tests

[testenv:mypy]
deps = mypy
commands = mypy tests
